2006-04-22  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* scm/stencil.scm (eps-file->stencil): fix EPS PS embedding code 

2006-04-21  Erlend Aasland  <erlenda@gmail.com>

	* ly/engraver-init.ly: remove old comments from TabVoice

2006-04-20  Graham Percival  <gpermus@gmail.com>

	* Documentation/user/instrument-notation.itely: added Erlend's
	latest doc patch, thanks!

2006-04-19  Erlend Aasland <erlenda@gmail.com>

	* lily/include/slur.hh:
	* lily/slur.cc:
	* lily/phrasing-slur-engraver.cc:
	* lily/slur-engraver.cc: Fix 'cut & paste' code by merging
	acknowledge_extra_object () from Phrasing_slur_engraver:: and
	Slur_engraver:: and putting it in
	Slur::auxiliary_acknowledge_extra_object ().

	* ps/music-drawing-routines.ps (draw_dashed_slur): fix another bug

	* lily/note-collision.cc: fix a comment

2006-04-18  Heikki Junes  <hjunes@cc.hut.fi>

	* stepmake/bin/add-html-footer.py: fix footer position in
	generated html files: before </body> and </html> tags.

2006-04-18  Heikki Junes  <hjunes@cc.hut.fi>

	* scripts/GNUmakefile: revert last "fix", which rather broke make.
	Earlier successive `make' commands finally compiled ok.

	* Documentation/topdocs/INSTALL.texi: require mftrace 1.1.19.

2006-04-18  Erlend Aasland <erlenda@gmail.com>

	* lily/include/stem-tremolo.hh:
	* lily/stem-tremolo.cc: move rotated_box () to Lookup:: and update
	callers.

	* lily/lookup.cc:
	* lily/include/lookup.hh: add rotated_box ()

2006-04-18  Heikki Junes  <hjunes@cc.hut.fi>

	* scripts/GNUmakefile: bugfix: run help2man only after scripts have 
	been generated. Fixes "can't get `--help'" bug after make clean.

	* THANKS: alphabetize contributors.

2006-04-17  Graham Percival  <gpermus@gmail.com>

	* Documentation/user/instrument-notation.itely: added Erlend's
	tabs and banjo doc patch.  Thanks!

2006-04-17  Erlend Aasland  <erlenda@gmail.com>

	* scm/define-grobs.scm: fix stem-attachment for tablature note heads.

	* ps/music-drawing-routines.ps (draw_dashed_line): fix dash pattern bug.