@@ -41,11 +41,11 @@ Colin Wilding
 David Rogers
 J. Leung
 Harald Wellmann
+Keith Packard
 Orm Finnendahl
 Rick Hansen
 Stephen Carter
 Werner Lemberg
-
 
 Release 2.8
 ***********
