@@ -1,5 +1,9 @@
 2006-04-22  Han-Wen Nienhuys  <hanwen@xs4all.nl>
 
+	* lily/relocate.cc (expand_environment_variables): new function.
+	(read_line): id.
+	(read_relocation_file): id.
+
 	* scm/stencil.scm (eps-file->stencil): fix EPS PS embedding code 
 
 2006-04-21  Erlend Aasland  <erlenda@gmail.com>
